# ChangeLog for media-sound/minitunes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*minitunes-9999 (24 Aug 2010)

  24 Aug 2010; Nikoli <nikoli@lavabit.com> minitunes-0.1.1.ebuild,
  +minitunes-9999.ebuild:
  live ebuild, fixed phonon dep

*minitunes-0.1.1 (24 Aug 2010)

  24 Aug 2010; Nikoli <nikoli@lavabit.com> +minitunes-0.1.1.ebuild,
  +metadata.xml:
  initial ebuild
