@@ -1,5 +1,5 @@
 DIST minitunes-0.1.1.tar.gz 210701 RMD160 f6f0a5cfb1c24a1c1b1e8a519cae531461b2abfc SHA1 3e864199a72e16c720a1c724132dd2cc7d4ef82d SHA256 b8610e61ac69ba15637bf74a88db089d1ba58445b3cc3b0d40d2d37f98899c3b
-EBUILD minitunes-0.1.1.ebuild 570 RMD160 c4e1204b6be26b7674bc731b821becd8136d51db SHA1 b6b2f31c9998ffda606ee9979da185ecebb7c8af SHA256 60750435896dd2cecaefaf76039df757585f9b9abcf7fede3a288c1c4a526eee
-EBUILD minitunes-9999.ebuild 555 RMD160 5f3ce8ce1ecd3b267496cd211e19fdfdd636da0c SHA1 47fa9f19f86fcd86942ef6dcfe1f215a90482777 SHA256 bde161ec839ffc577d85e801107f3d27094d89f0770e9723eb75df6ce66f7767
-MISC ChangeLog 414 RMD160 3f0053ca1ef5409252c2adceb6c5ced93655b8b0 SHA1 2d79d39b897d29fe194ef61e2764c6772cdbd585 SHA256 fe1c0ad6b6d331fdb9812fd63e456912ac73317c820ef26237bb32073fb7249a
+EBUILD minitunes-0.1.1.ebuild 591 RMD160 749df38ba1bbd4bf88da1b6eb011cb77266aba94 SHA1 ad2f37c0587a3fa870164b839418f6b62d37ca93 SHA256 99424d8680850ed6e6bcf771afe8cc5916208f04cb3ada33f8a5f4ee203de3a1
+EBUILD minitunes-9999.ebuild 556 RMD160 a80bc20994383e7213e66d3e6b2310174cf91dd1 SHA1 45090ab57913b85bceef159d9f7ceb90a1fb2b7d SHA256 75fd36f18f23fac3baebd257b8b66881b297cf511b57a3ca0296eef08081e847
+MISC ChangeLog 536 RMD160 8feb81ef41a4fa507c611a6ce0eea8f9d014985c SHA1 32d87943bb0aea1776f3206e7d6936d2ad7d2f2e SHA256 22b98136e8b9f946ccb1b9d6b26a4461099ed81f595c2b763164214aebd7db7a
 MISC metadata.xml 226 RMD160 093e2a5510979ff71f1f585e71eca1f015350a00 SHA1 bf06e32067d1d1968de31788927d267dd3f8208d SHA256 015b1c2b2efefed02f3bd9413e0abffd97ee2d0bec2cc90bc5e0f5ff6fc00f0c
