@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="2"
+EAPI="4"
 
 inherit qt4-r2
 
@@ -15,12 +15,13 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-DEPEND="
+RDEPEND="
 	x11-libs/qt-gui:4[dbus]
 	x11-libs/qt-sql:4[sqlite]
 	|| ( x11-libs/qt-phonon:4 media-libs/phonon )
 	media-libs/taglib
 "
+DEPEND="${RDEPEND}"
 
 S="${WORKDIR}/${PN}"
 
