@@ -1,10 +1,10 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="2"
+EAPI="4"
 
-inherit qt4-r2 git
+inherit qt4-r2 git-2
 
 DESCRIPTION="Qt4 music player."
 HOMEPAGE="http://flavio.tordini.org/minitunes"
@@ -15,14 +15,13 @@ SLOT="0"
 KEYWORDS=""
 IUSE=""
 
-DEPEND="
+RDEPEND="
 	x11-libs/qt-gui:4[dbus]
 	x11-libs/qt-sql:4[sqlite]
 	|| ( x11-libs/qt-phonon:4 media-libs/phonon )
 	media-libs/taglib
 "
-
-S="${WORKDIR}/${PN}"
+DEPEND="${RDEPEND}"
 
 DOCS="CHANGES TODO"
 
